# ai-aigents

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  requirements.txt
app/agents/agno/: main.py  pyproject.toml
app/agents/agno/level_2_agent/: agent.py
app/agents/agno_p/dentist_bot/: agent.py  playground.py
app/agents/agno_p/level_1_agent/: agent.py
app/agents/agno_p/level_3_agent/: agent.py
app/agents/agno_p/level_4_agent/: agent.py
app/agents/agno_p/level_5_agent/: agent.py
app/agents/agno_p/playground/: agent.py
app/agents/agno_p/tmp/: agent.db  agents.db
app/agents/langgraph_p/: pyproject.toml
app/agents/langgraph_p/hello/: agent.py
app/huggingface_course/: README.md
app/huggingface_course/3_workflow_servers/: github_events.json  pyproject.toml  server.py  webhook_server.py
app/huggingface_course/3_workflow_servers/templates/: default.md  feature.md  hotfix_bugfix.md  refactor.md
app/huggingface_course/module_1/: README.md  agent.json  main.py  pyproject.toml  server.py
app/huggingface_course/module_2/: README.md  app.py  config.json  mcp.json  pyproject.toml  requirements.txt
app/huggingface_course/module_2_mcp_client_gradio/: README.md  app.py  pyproject.toml
app/huggingface_course/module_2_tiny_agents/: README.md  agent.json  agent.mjs  package.json  pnpm-lock.yaml
app/mcp_1/: Dockerfile  client.py  docker-compose.yaml  pyproject.toml  server.py
app/portfolio_chat/: Dockerfile  docker-compose.yaml  logger.py  main.py  pyproject.toml  requirements.txt
app/portfolio_chat/prompts/: system_prompt.txt
notebooks/: RAG_01.ipynb
notebooks/RAG_01/: RAG_01.ipynb
notebooks/RAG_01/llm_instructions/: system_prompt.txt
notebooks/prompt_engineering/: prompting.ipynb
(+21 files in other folders)
